fix gap in navigation bar

--- a/projects/styles.css
+++ b/projects/styles.css
@@ -53,7 +53,7 @@ header {
     transition: max-height 0.5s ease;
     overflow: hidden;
     box-sizing: border-box;
-    gap: 1rem;
+    gap: .5rem;
     max-height: 0;
 }
 
